--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,229 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
+
+:root {
+  --Dark-Slate-Grey: hsl(234, 29%, 20%);
+  --Charcoal-Grey: hsl(235, 18%, 26%);
+  --Grey: hsl(231, 7%, 60%);
+  --White: hsl(0, 0%, 100%);
+  --Desaturated-Red: hsl(0, 60%, 89%);
+
+  --ff-primary: "Roboto", sans-serif;
+
+  --br: .5rem;
+}
+
+/* For box sizing */
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+/* Removes default margin */
+body,
+h1,
+h2,
+h3,
+h4,
+p,
+figure,
+blockquote,
+dl,
+dd {
+  margin: 0;
+}
+
+/* List elements */
+ul[role="list"],
+ol[role="list"] {
+  list-style: none;
+}
+
+ul[class],
+ol[class] {
+  list-style: none;
+}
+
+/*  root defaults */
+html:focus-within {
+  scroll-behavior: smooth;
+}
+
+/* Set core body defaults */
+body {
+  min-height: 100vh;
+  text-rendering: optimizeSpeed;
+  line-height: 1.2;
+}
+
+/* Default styles for elements that do not have a class*/
+a:not([class]) {
+  text-decoration-skip-ink: auto;
+}
+
+/* Global styling for images*/
+img,
+picture {
+  max-width: 100%;
+  display: block;
+}
+
+/* inputs and buttons */
+input,
+button,
+textarea,
+select {
+  font: inherit;
+}
+
+/* Remove all animations, transitions and smooth scroll */
+@media (prefers-reduced-motion: reduce) {
+  html:focus-within {
+    scroll-behavior: auto;
+  }
+
+  *,
+  *::before,
+  *::after {
+    animation-duration: 0.01ms !important;
+    animation-iteration-count: 1 !important;
+    transition-duration: 0.01ms !important;
+    scroll-behavior: auto !important;
+  }
+}
+
+ul {
+  padding-left: 0;
+}
+
+body {
+  background-color: var(--Dark-Slate-Grey);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+  font-family: var(--ff-primary);
+}
+
 .App {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+ 
+  background: var(--White);
+  max-width: 22rem;
+}
+
+.text-container {
+  padding: 2rem 1.5rem;
+}
+
+h1 {
+  color: var(--Dark-Slate-Grey);
+  font-family: var(--ff-primary);
+  font-size: 2.3rem;
+  font-weight: 700;
+  line-height: 1.1;
+  margin-bottom: 1rem;
+}
+
+h2, p {
+  color: var(--Charcoal-Grey);
+  font-size: 1rem;
+  font-weight: 400;
+}
+
+.main-list {
+  margin-block: 1.5rem;
+  margin-bottom: 2.5rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.sub-list {
+  display: flex;
+  gap: .7rem;
+  align-items: start;
+}
+
+.form {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.email {
+  padding: .8rem;
+  border-radius: var(--br);
+  border: 1px solid var(--Grey);
+}
+
+.btn {
+  padding: .8rem;
+  border-radius: var(--br);
+  color: var(--White);
+  background-color: var(--Dark-Slate-Grey);
+  border: none;
+  cursor: pointer;
+}
+
+.btn:hover {
+  background-color: #FF6155;
+  box-shadow: 0px 5px 24px #FF6155;
+}
+
+.form-label {
+  display: flex;
+  justify-content: space-between;
+}
+
+.label {
+  color: var(--Dark-Slate-Grey);
+  font-size: .9rem;
+  font-weight: 700;
+}
+
+.formError {
+  color: red;
+  font-size: .9rem;
+}
+
+.formError1 {
+  border: 1px solid red;
+  background-color: var(--Desaturated-Red);
+}
+
+.formSuccess {
+  border: 1px solid var(--Grey);
+}
+
+input:focus {
+  outline: none !important;
+}
+
+.success {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+@media (min-width: 768px) { 
+
+  .App {
+    display: flex;
+    flex-direction: row-reverse;
+    gap: 2rem;
+    max-width: none;
+    padding: 1rem;
+    border-radius: 1rem;
+  }
+  
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+@media (min-width: 868px) { 
+  .App {
+    max-width: 50rem;
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
